feat: add autocompletition and plugin in pom.xml to access internal class